# tm_infra

./: README.md  meson.build
TMInfraDotNet/: BasicDataTypes.cs  KleisliUtils.cs  RealTimeApp.cs  RealTimeAppRunner.cs  TMInfraDotNet.csproj
node_lib/: TMInfra.ts  TMInfra.ts.bak  package-lock.json  package.json
node_lib/src/: index.ts  types.ts
src/: AppHeaders.cpp  ChronoUtils.cpp  GraphStructureBasedResourceHolderComponent.cpp  MonadHeaders.cpp  PidUtil.cpp  meson.build
tm_kit/infra/: AppClassifier.hpp  AutoConnectionSubGraph.hpp  BasicWithTimeApp.hpp  BasicWithTimeApp_ConnectN_Piece.hpp  BasicWithTimeApp_ExecuteAction_Piece.hpp  BasicWithTimeApp_Pure_Maybe_Kleisli_Piece.hpp  BasicWithTimeApp_VariantAndMerge_Piece.hpp  BasicWithTimeApp_VariantSink_Piece.hpp  BasicWithTimeMonad.hpp  BasicWithTimeMonad_ExecuteAction_Piece.hpp  BasicWithTimeMonad_Pure_Maybe_Kleisli_Piece.hpp  BasicWithTimeMonad_VariantAndMerge_Piece.hpp  BasicWithTimeMonad_VariantSink_Piece.hpp  ChronoUtils.hpp  ControllableNode.hpp  DeclarativeGraph.hpp  Environments.hpp  GenericLift.hpp  GraphCheckComponents.hpp  GraphStructureBasedResourceHolderComponent.hpp  IntIDComponent.hpp  KleisliSequence.hpp  KleisliUtils.hpp  LogLevel.hpp  NodeClassifier.hpp  ObservableNode.hpp  PidUtil.hpp  RealTimeApp.hpp  RealTimeApp_AbstractAction_Piece.hpp  RealTimeApp_ActionCore_Piece.hpp  RealTimeApp_ConnectN_Piece.hpp  RealTimeApp_EnhancedMaybeN_Piece.hpp  RealTimeApp_EnhancedMultiN_Piece.hpp  RealTimeApp_ExecuteAction_Piece.hpp  RealTimeApp_KleisliMultiN_Piece.hpp  RealTimeApp_KleisliN_Piece.hpp  RealTimeApp_MaybeN_Piece.hpp  RealTimeApp_Merge_Piece.hpp  RealTimeApp_MultiActionCore_Piece.hpp  RealTimeApp_MultiN_Piece.hpp  (+64 more)
