tm_infra_headers = [
      'LogLevel.hpp'
    , 'WithTimeData.hpp'
    , 'BasicWithTimeMonad.hpp'
    , 'RealTimeMonad.hpp'
    , 'SinglePassIterationMonad.hpp'
    , 'BasicWithTimeMonad_ExecuteAction_Piece.hpp'
    , 'BasicWithTimeMonad_Pure_Maybe_Kleisli_Piece.hpp'
    , 'BasicWithTimeMonad_VariantAndMerge_Piece.hpp'
    , 'BasicWithTimeMonad_VariantSink_Piece.hpp'
    , 'WithTimeData_ActionCheckDataCreate_Piece.hpp'
    , 'WithTimeData_TupleCopy_Piece.hpp'
    , 'WithTimeData_VariantExecute_Piece.hpp'
    , 'WithTimeData_VariantSink_Piece.hpp'
    , 'RealTimeMonad_AbstractAction_Piece.hpp'
    , 'RealTimeMonad_ActionCore_Piece.hpp'
    , 'RealTimeMonad_ExecuteAction_Piece.hpp'
    , 'RealTimeMonad_KleisliN_Piece.hpp'
    , 'RealTimeMonad_MaybeN_Piece.hpp'
    , 'RealTimeMonad_EnhancedMaybeN_Piece.hpp'
    , 'RealTimeMonad_Merge_Piece.hpp'
    , 'RealTimeMonad_PureN_Piece.hpp'
    , 'RealTimeMonad_ThreadedHandler_Piece.hpp'
    , 'RealTimeMonad_TimeChecker_Piece.hpp'
    , 'RealTimeMonad_VariantSink_Piece.hpp'
    , 'SinglePassIterationMonad_AbstractActionCore_Piece.hpp'
    , 'SinglePassIterationMonad_ActionCore_Piece.hpp'
    , 'SinglePassIterationMonad_ExecuteAction_Piece.hpp'
    , 'SinglePassIterationMonad_Merge_Piece.hpp'
    , 'SinglePassIterationMonad_Pure_Maybe_Kleisli_Piece.hpp'
    , 'SinglePassIterationMonad_VariantSink_Piece.hpp'
    , 'Environments.hpp'
    , 'TerminationController.hpp'
    , 'ChronoUtils.hpp'
    , 'IntIDComponent.hpp'
    ]
  
install_headers(tm_infra_headers, subdir : 'tm_kit/infra')
