tm_infra_headers = [
      'LogLevel.hpp'
    , 'WithTimeData.hpp'
    , 'BasicWithTimeApp.hpp'
    , 'RealTimeApp.hpp'
    , 'SinglePassIterationApp.hpp'
    , 'TopDownSinglePassIterationApp.hpp'
    , 'BasicWithTimeApp_ExecuteAction_Piece.hpp'
    , 'BasicWithTimeApp_Pure_Maybe_Kleisli_Piece.hpp'
    , 'BasicWithTimeApp_VariantAndMerge_Piece.hpp'
    , 'BasicWithTimeApp_VariantSink_Piece.hpp'
    , 'BasicWithTimeApp_ConnectN_Piece.hpp'
    , 'WithTimeData_TupleCopy_Piece.hpp'
    , 'WithTimeData_VariantExecute_Piece.hpp'
    , 'WithTimeData_VariantSink_Piece.hpp'
    , 'WithTimeData_VariantSink_ClassPiece.hpp'
    , 'WithTimeData_ConnectN_Piece.hpp'
    , 'WithTimeData_ConnectN_ClassPiece.hpp'
    , 'RealTimeApp_AbstractAction_Piece.hpp'
    , 'RealTimeApp_ActionCore_Piece.hpp'
    , 'RealTimeApp_MultiActionCore_Piece.hpp'
    , 'RealTimeApp_ExecuteAction_Piece.hpp'
    , 'RealTimeApp_KleisliN_Piece.hpp'
    , 'RealTimeApp_KleisliMultiN_Piece.hpp'
    , 'RealTimeApp_MaybeN_Piece.hpp'
    , 'RealTimeApp_MultiN_Piece.hpp'
    , 'RealTimeApp_EnhancedMaybeN_Piece.hpp'
    , 'RealTimeApp_EnhancedMultiN_Piece.hpp'
    , 'RealTimeApp_Merge_Piece.hpp'
    , 'RealTimeApp_PureN_Piece.hpp'
    , 'RealTimeApp_ThreadedHandler_Piece.hpp'
    , 'RealTimeApp_TimeChecker_Piece.hpp'
    , 'RealTimeApp_VariantSink_Piece.hpp'
    , 'RealTimeApp_ProducerN_Piece.hpp'
    , 'RealTimeApp_ConnectN_Piece.hpp'
    , 'SinglePassIterationApp_AbstractActionCore_Piece.hpp'
    , 'SinglePassIterationApp_ActionCore_Piece.hpp'
    , 'SinglePassIterationApp_ExecuteAction_Piece.hpp'
    , 'SinglePassIterationApp_Merge_Piece.hpp'
    , 'SinglePassIterationApp_Pure_Maybe_Kleisli_Piece.hpp'
    , 'SinglePassIterationApp_VariantSink_Piece.hpp'
    , 'SinglePassIterationApp_Provider_Adapter_Piece.hpp'
    , 'SinglePassIterationApp_ConnectN_Piece.hpp'
    , 'TopDownSinglePassIterationApp_AbstractAction_Piece.hpp'
    , 'TopDownSinglePassIterationApp_ActionCore_Piece.hpp'
    , 'TopDownSinglePassIterationApp_MultiActionCore_Piece.hpp'
    , 'TopDownSinglePassIterationApp_ExecuteAction_Piece.hpp'
    , 'TopDownSinglePassIterationApp_KleisliN_Piece.hpp'
    , 'TopDownSinglePassIterationApp_KleisliMultiN_Piece.hpp'
    , 'TopDownSinglePassIterationApp_MaybeN_Piece.hpp'
    , 'TopDownSinglePassIterationApp_MultiN_Piece.hpp'
    , 'TopDownSinglePassIterationApp_EnhancedMaybeN_Piece.hpp'
    , 'TopDownSinglePassIterationApp_EnhancedMultiN_Piece.hpp'
    , 'TopDownSinglePassIterationApp_Merge_Piece.hpp'
    , 'TopDownSinglePassIterationApp_PureN_Piece.hpp'
    , 'TopDownSinglePassIterationApp_TimeChecker_Piece.hpp'
    , 'TopDownSinglePassIterationApp_VariantSink_Piece.hpp'
    , 'TopDownSinglePassIterationApp_ProducerN_Piece.hpp'
    , 'TopDownSinglePassIterationApp_ConnectN_Piece.hpp'
    , 'Environments.hpp'
    , 'TerminationController.hpp'
    , 'ChronoUtils.hpp'
    , 'KleisliUtils.hpp'
    , 'VersionedData.hpp'
    , 'PidUtil.hpp'
    , 'TraceNodesComponent.hpp'
    , 'TupleVariantHelper.hpp'
    , 'ControllableNode.hpp'
    , 'ObservableNode.hpp'
    , 'StoppableProducer.hpp'
    , 'GenericLift.hpp'
    , 'AutoConnectionSubGraph.hpp'
    , 'DeclarativeGraph.hpp'
    , 'NodeClassifier.hpp'
    , 'KleisliSequence.hpp'
    ]
  
install_headers(tm_infra_headers, subdir : 'tm_kit/infra')
